@@ -17,7 +17,6 @@
 ** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 **/
 
-
 #ifndef ZABBIX_OPERATIONS_H
 #define ZABBIX_OPERATIONS_H
 
@@ -33,7 +32,5 @@ void	op_host_del(DB_EVENT *event);
 void	op_host_enable(DB_EVENT *event);
 void	op_host_disable(DB_EVENT *event);
 void    op_run_commands(char *cmd_list);
-/*int	check_user_active(zbx_uint64_t userid);
-void	op_notify_user(DB_EVENT *event, DB_ACTION *action, DB_OPERATION *operation);*/
 
 #endif
